# newscatcherapi-sdk-python

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
newscatcherapi/: __init__.py  const.py  newscatcherapi_auth.py  newscatcherapi_client.py  newscatcherapi_exception.py  utils.py
tests/: test_newscatcherapi_client.py
